After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781857 - Fix parameter name warnings
Fix parameter name warnings
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: language-bindings
1.40.x
Other Linux
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2017-04-27 18:11 UTC by Matijs van Zuijlen
Modified: 2017-10-27 21:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to make parameter names consistent. (991 bytes, patch)
2017-04-27 18:11 UTC, Matijs van Zuijlen
committed Details | Review

Description Matijs van Zuijlen 2017-04-27 18:11:10 UTC
Created attachment 350575 [details] [review]
Patch to make parameter names consistent.

The attached patch fixes two warnings emitted by g-ir-scanner that were due to a mismatch of parameter names.

See also https://github.com/ruby-gnome2/ruby-gnome2/issues/1020#issuecomment-297396468

Thanks go to Kouhei Sutou for this patch.