Fix parameter name to match implementation

https://bugzilla.gnome.org/show_bug.cgi?id=781857